# git-sync

./: .gitignore  README.md  all_code.txt  git_sync.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
core/: config.py  console.py  constants.py  git_utils.py  main_flow.py
locales/: en.json  strings.json  vi.json
tests/: test_config.py  test_git_sync_cli.py  test_git_utils.py  test_hooks.py  test_integration.py  test_main_flow.py
